--- a/pokespinandinfo/info.html
+++ b/pokespinandinfo/info.html
@@ -15,8 +15,13 @@
     <span> <img src="./imgs/pokebottom.png" class="img-fluid bottom-part"  width="600px" alt="bottom"></span>
     <span><button style="z-index: 1;" id="pokeget-btn" onclick="Show_that_pokemon()">Search</button></span><!--Here is what we use to search for a pokemon-->
 
-    <div class="" id="dex-body">
+    <div class="hide-away" id="dex-body">
         <!--This will show the body-->
+        <div id="pokemon-icon" class="iconsection">
+            pokemonicon
+             
+        </div>
+        <h1 id="pokemon-name">pokemon name</h1>
     </div>
 </div>
     <script src="./JS/PokeInfo.js"></script>
