--- a/pokespinandinfo/info.html
+++ b/pokespinandinfo/info.html
@@ -6,6 +6,13 @@
     <title>PokrSpinner/Info</title>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
     <link rel="stylesheet" href="./CSS/info.css">
+    <style>
+        h1{
+           position: relative;
+           left: 280px;
+           font-size: 3.3rem;
+        }
+    </style>
 </head>
 <body>
     <div class="container">
@@ -16,11 +23,9 @@
     <span><button style="z-index: 1;" id="pokeget-btn" onclick="Show_that_pokemon()">Search</button></span><!--Here is what we use to search for a pokemon-->
 
     <div class="hide-away" id="dex-body">
+        <span id="no-pokemon"></span>
         <!--This will show the body-->
-        <div id="pokemon-icon" class="iconsection">
-            pokemonicon
-             
-        </div>
+        <div id="pokemon-icon" class="iconsection"></div>
         <h1 id="pokemon-name">pokemon name</h1>
     </div>
 </div>
