STAT PRECENTAGE NOT SHOWING
NEED TO SHOW TOTAL STAT PRECENTAGE BUT ITS NOT SHOWING FIXING AND WORKING ON PROBLEM SO ITS GONE BY TMRW

--- a/pokespinandinfo/info.html
+++ b/pokespinandinfo/info.html
@@ -60,37 +60,37 @@
 
                 <li>
                     <div class="progress"><!--For hp-->
-                        <div class="progress-bar bg-success" id="hp" role="progressbar" aria-valuenow="25" aria-valuemin="0" aria-valuemax="100"></div>
+                        <div class="progress-bar " id="hp" style="color: lawngreen; width: 45%;" role="progressbar" aria-valuenow="25" aria-valuemin="0" aria-valuemax="100"></div>
                     </div>
                 </li>
                 <br>
                 <li>
-                    <div class="progress"><!--For attack-->
-                        <div class="progress-bar bg-success" id="attack" role="progressbar" aria-valuenow="25" aria-valuemin="0" aria-valuemax="100"></div>
+                    <div class="progress"  ><!--For attack-->
+                        <div class="progress-bar  " id="attack" role="progressbar" style="color: red; "aria-valuenow="50" aria-valuemin="0" aria-valuemax="100"></div>
                     </div>
                 </li>
                 <br>
                 <li>
                     <div class="progress"><!--For defense-->
-                        <div class="progress-bar bg-success" id="def" role="progressbar" aria-valuenow="25" aria-valuemin="0" aria-valuemax="100"></div>
+                        <div class="progress-bar  " id="def" style="color: rgb(36, 212, 227);" role="progressbar" aria-valuenow="25" aria-valuemin="0" aria-valuemax="100"></div>
                     </div>
                 </li>
                 <br>
                 <li>
                     <div class="progress"><!--For special-attack-->
-                        <div class="progress-bar bg-success" id="special-atk" role="progressbar" aria-valuenow="25" aria-valuemin="0" aria-valuemax="100"></div>
+                        <div class="progress-bar" id="special-atk" role="progressbar" style="color: rgb(115, 22, 22);" aria-valuenow="25" aria-valuemin="0" aria-valuemax="100"></div>
                     </div>
                 </li>
                 <br>
                 <li>
                     <div class="progress"><!--For special-defense-->
-                        <div class="progress-bar bg-success" id="special-def" role="progressbar" aria-valuenow="25" aria-valuemin="0" aria-valuemax="100"></div>
+                        <div class="progress-bar " id="special-def" role="progressbar" style="color: rgb(13, 8, 92);" aria-valuenow="25" aria-valuemin="0" aria-valuemax="100"></div>
                     </div>
                 </li>
                 <br>
                 <li>
                     <div class="progress"><!--For speed-->
-                        <div class="progress-bar bg-success" id="speed" role="progressbar" aria-valuenow="25" aria-valuemin="0" aria-valuemax="100"></div>
+                        <div class="progress-bar " id="speed" role="progressbar" style="color: blueviolet;" aria-valuenow="25" aria-valuemin="0" aria-valuemax="100"></div>
                     </div>
                 </li>
             </ul>
