--- a/pokespinandinfo/info.html
+++ b/pokespinandinfo/info.html
@@ -23,7 +23,27 @@
         li{
             font-size: 25px;
         }
-            
+.stat-bar{
+    margin-top: -40%;
+    margin-left: 30%;
+}
+.stat-body{
+    background-color: whitesmoke;
+    width: 450px;
+    height: 20px;
+    border-radius: 15px;
+    position: relative;
+
+}
+
+
+.progress {
+        width: 0;
+        height: 100%;
+        background-color: #4CAF50;
+        position: absolute;
+    }
+
     </style>
 </head>
 <body>
@@ -32,7 +52,7 @@
     <span><img src="./imgs/poketop.png" class="img-fluid top-part" width="600px" id="poketop-red" alt="top"></span>
     <span id="search-sectionv"><input type="text" class="poke-btn" id="poke-btn" style="    text-align: center;"  placeholder=" Enter pokemon/id"></span>
     <span> <img src="./imgs/pokebottom.png" class="img-fluid bottom-part"  width="600px" alt="bottom"></span>
-    <span><button style="z-index: 1;" id="pokeget-btn" onclick="Show_that_pokemon()">Search</button></span><!--Here is what we use to search for a pokemon-->
+    <span><button style="z-index: 1;" id="pokeget-btn" >Search</button></span><!--Here is what we use to search for a pokemon-->
 
     <div class="hide-away" id="dex-body">
 
@@ -56,50 +76,46 @@
         </div>
 
         <div class="container-md stat-bar p-5">
-            <ul id="moves-learned">
 
-                <li>
-                    <div class="progress"><!--For hp-->
-                        <div class="progress-bar " id="hp" style="color: lawngreen; width: 45%;" role="progressbar" aria-valuenow="25" aria-valuemin="0" aria-valuemax="100"></div>
-                    </div>
-                </li>
+                        <!--For hp-->
+                        <div class="stat-body">
+                        <div class="" id="hp"  role="" aria-valuenow="25" aria-valuemin="0" aria-valuemax="100"></div>
+                        </div> 
+               <br>
+                        <!--For attack-->
+                        <div class="stat-body">
+                        <div class="" id="attack" role="" style="color: red; "aria-valuenow="50" aria-valuemin="0" aria-valuemax="100"></div>
+                        </div>
+               
                 <br>
-                <li>
-                    <div class="progress"  ><!--For attack-->
-                        <div class="progress-bar  " id="attack" role="progressbar" style="color: red; "aria-valuenow="50" aria-valuemin="0" aria-valuemax="100"></div>
-                    </div>
-                </li>
+                        <!--For defense-->
+                        <div class="stat-body">
+                        <div class="progress" id="def" style="color: rgb(36, 212, 227);" role="progressbar" aria-valuenow="25" aria-valuemin="0" aria-valuemax="100"></div>
+                        </div>
                 <br>
-                <li>
-                    <div class="progress"><!--For defense-->
-                        <div class="progress-bar  " id="def" style="color: rgb(36, 212, 227);" role="progressbar" aria-valuenow="25" aria-valuemin="0" aria-valuemax="100"></div>
-                    </div>
-                </li>
+                        <!--For special-attack-->
+                        <div class="stat-body">
+                        <div  id="special-atk" style="color: rgb(115, 22, 22);" aria-valuenow="25" aria-valuemin="0" aria-valuemax="100"></div>
+                        </div>
+                        <br>
+                        <!--For special-defense-->
+                        <div class="stat-body">
+                        <div  id="special-def"  style="color: rgb(13, 8, 92);" aria-valuenow="25" aria-valuemin="0" aria-valuemax="100"></div>
+                        </div>
                 <br>
-                <li>
-                    <div class="progress"><!--For special-attack-->
-                        <div class="progress-bar" id="special-atk" role="progressbar" style="color: rgb(115, 22, 22);" aria-valuenow="25" aria-valuemin="0" aria-valuemax="100"></div>
+                        <!--For speed-->
+                        <div class="stat-body">
+                        <div  id="speed" style="color: blueviolet;" aria-valuenow="25" aria-valuemin="0" aria-valuemax="100"></div>
+                        </div>
                     </div>
-                </li>
-                <br>
-                <li>
-                    <div class="progress"><!--For special-defense-->
-                        <div class="progress-bar " id="special-def" role="progressbar" style="color: rgb(13, 8, 92);" aria-valuenow="25" aria-valuemin="0" aria-valuemax="100"></div>
-                    </div>
-                </li>
-                <br>
-                <li>
-                    <div class="progress"><!--For speed-->
-                        <div class="progress-bar " id="speed" role="progressbar" style="color: blueviolet;" aria-valuenow="25" aria-valuemin="0" aria-valuemax="100"></div>
-                    </div>
-                </li>
-            </ul>
-        </div>
 
 
     </div>
 </div>
     <script src="./JS/PokeInfo.js"></script>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz" crossorigin="anonymous"></script>
+    <script>
+
+    </script>
 </body>
 </html>
