--- a/index.html
+++ b/index.html
@@ -1,26 +1,121 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-    <link rel="stylesheet" href="./CSS/style.css">
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Pokeinfospinner</title>
-    <!--Bootstrap-->
-    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC" crossorigin="anonymous">
-    <!--Bootstrap-->
+    <title>PokrSpinner/Info</title>
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Bebas+Neue&family=Rubik:ital,wght@0,300..900;1,300..900&display=swap" rel="stylesheet">
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
+    <link rel="stylesheet" href="./CSS/info.css">
+    <style>
+        h1{
+           position: relative;
+           left: 280px;
+    
+        }
+        ul{
+            margin-left:34% ;
+            list-style: none;
+        }
 
+        li{
+            font-size: 25px;
+        }
+.stat-bar{
+    margin-top: -40%;
+    margin-left: 30%;
+}
+.stat-body{
+    background-color: whitesmoke;
+    width: 450px;
+    height: 20px;
+    border-radius: 15px;
+    position: relative;
+
+}
+
+
+.progresss {
+        width: 0;
+        height: 100%;
+        background-color: #4CAF50;
+        position: absolute;
+    }
+
+    </style>
 </head>
 <body>
-    <h1>Pokespinner</h1>
-    <div class="wheel-body">
-        <p id="info"></p>
-    </div>
+    <div class="container">
+        <!--This whole section is the pokeball body and search-->
+    <span><img src="./imgs/poketop.png" class="img-fluid top-part" width="600px" id="poketop-red" alt="top"></span>
+    <span id="search-sectionv"><input type="text" class="poke-btn" id="poke-btn" style="    text-align: center;"  placeholder=" Enter pokemon/id"></span>
+    <span> <img src="./imgs/pokebottom.png" class="img-fluid bottom-part"  width="600px" alt="bottom"></span>
+    <span><button style="z-index: 1;" id="pokeget-btn" >Search</button></span><!--Here is what we use to search for a pokemon-->
 
-    <script src="./JS/pokejs.js"></script>
-    <!--Bootstrap-->
-    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.bundle.min.js" integrity="sha384-MrcW6ZMFYlzcLA8Nl+NtUVF0sA7MsXsP1UyJoMp4YLEuNSfAP+JcXn/tWtIaxVXM" crossorigin="anonymous"></script>
-    <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.9.2/dist/umd/popper.min.js" integrity="sha384-IQsoLXl5PILFhosVNubq5LC7Qb9DXgDA9i+tQ8Zj3iwWAwPtgFTxbJ8NT4GN1R8p" crossorigin="anonymous"></script>
-    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.min.js" integrity="sha384-cVKIPhGWiC2Al4u+LWgxfKTRIcfu0JTxR+EQDz/bgldoEyl4H0zUF0QKbrJ0EcQF" crossorigin="anonymous"></script>
-<!--Bootstrap-->
+    <div class="hide-away" id="dex-body">
+
+        <span id="no-pokemon"></span>
+        <!--This will show the body-->
+        <div id="pokemon-icon" class="iconsection">
+            <h1 id="pokemon-name" style="position: relative; left: -2px;top: -40px;"></h1>
+        </div>
+
+        <ul id="Abilites-list"><!--Display abilites-->
+            <p style="font-size: 45px;">Abilites</p>
+        </ul>        
+
+        <div class="genartioninfo"><!--Display generation-->
+            <span style="font-size: 29px;">First apperance</span>
+        <p id="origin-game"></p>
+        </div>
+
+        <div id="poke-type" class="container-md"><!--Display types-->
+            <p style="font-size: 29px;">Types</p>
+        </div>
+
+        <div class="container-md stat-bar p-5">
+
+                        <!--For hp-->
+                        <div class="stat-body">
+                        <div class="progresss" id="hp"  role="" aria-valuenow="25" aria-valuemin="0" aria-valuemax="100"></div>
+                        </div> 
+               <br>
+                        <!--For attack-->
+                        <div class="stat-body">
+                        <div class="progresss" id="attack" role="" style="color: red; "aria-valuenow="50" aria-valuemin="0" aria-valuemax="100"></div>
+                        </div>
+               
+                <br>
+                        <!--For defense-->
+                        <div class="stat-body">
+                        <div class="progresss" id="def" style="color: rgb(36, 212, 227);" role="progressbar" aria-valuenow="25" aria-valuemin="0" aria-valuemax="100"></div>
+                        </div>
+                <br>
+                        <!--For special-attack-->
+                        <div class="stat-body">
+                        <div class="progresss" id="special-atk" style="color: rgb(115, 22, 22);" aria-valuenow="25" aria-valuemin="0" aria-valuemax="100"></div>
+                        </div>
+                        <br>
+                        <!--For special-defense-->
+                        <div class="stat-body">
+                        <div  class="progresss" id="special-def"  style="color: rgb(13, 8, 92);" aria-valuenow="25" aria-valuemin="0" aria-valuemax="100"></div>
+                        </div>
+                <br>
+                        <!--For speed-->
+                        <div class="stat-body">
+                        <div class="progresss" id="speed" style="color: blueviolet;" aria-valuenow="25" aria-valuemin="0" aria-valuemax="100"></div>
+                        </div>
+                    </div>
+
+
+    </div>
+</div>
+    <script src="/JS/PokeInfo.js"></script>
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz" crossorigin="anonymous"></script>
+    <script>
+
+    </script>
 </body>
 </html>
