Added held items

--- a/index.html
+++ b/index.html
@@ -76,7 +76,9 @@
         <div id="poke-type" class="container-md"><!--Display types-->
             <p style="font-size: 29px;">Types</p>
         </div>
-
+        <div class="container">
+            <ul id="Helditem"></ul>
+        </div>
         <div class="container-md stat-bar p-5">
 
                         <!--For hp-->
@@ -110,7 +112,7 @@
                         <div class="" id="speed"  style="background-color: rgb(221, 3, 163);"aria-valuenow="25" aria-valuemin="0" aria-valuemax="100"></div>
                         </div>
                     </div>
-
+                
                 <div class="container">
                     <ul id="moves-list" class="moves-list-class">
 
