--- a/index.html
+++ b/index.html
@@ -9,6 +9,7 @@
     <link href="https://fonts.googleapis.com/css2?family=Bebas+Neue&family=Rubik:ital,wght@0,300..900;1,300..900&display=swap" rel="stylesheet">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
     <link rel="stylesheet" href="./CSS/info.css">
+    <link rel="stylesheet" href="./CSS/info-styling.css">
     <style>
         h1{
            position: relative;
@@ -56,7 +57,7 @@
     <span> <img src="./imgs/pokebottom.png" class="img-fluid bottom-part"  width="600px" alt="bottom"></span>
     <span><button style="z-index: 1;" id="pokeget-btn" >Search</button></span><!--Here is what we use to search for a pokemon-->
 
-    <div class="hide-away" id="dex-body">
+    <div class="hide-away" id="dex-body" >
 
         <span id="no-pokemon"></span>
         <!--This will show the body-->
@@ -64,7 +65,7 @@
             <h1 id="pokemon-name" style="position: relative; left: -2px;top: -40px;"></h1>
         </div>
 
-        <ul id="Abilites-list"><!--Display abilites-->
+        <ul id="Abilites-list" class="abilites-section"><!--Display abilites-->
             <p style="font-size: 45px;">Abilites</p>
         </ul>        
 
@@ -77,7 +78,9 @@
             <p style="font-size: 29px;">Types</p>
         </div>
         <div class="container">
-            <ul id="Helditem"></ul>
+            <ul id="Helditem">
+                <p style="font-size: 35px;">Held Items</p>
+            </ul>
         </div>
         <div class="container-md stat-bar p-5">
 
