--- a/Pokespinner-styling 16.38.45/PokeWheel.html
+++ b/Pokespinner-styling 16.38.45/PokeWheel.html
@@ -8,30 +8,37 @@
 
     <link rel="stylesheet" href="CSS/wheel.css">
     <link rel="stylesheet" href="CSS/EnterPokemon.css">
+    <style>
+        button{
+    position: absolute;
+    top: 619px;
+    left: 740px;
+    height: 46px;
+    width: 120px;
+}
+button:hover{
+    background-color: grey;
+}
+
+    </style>
 </head>
 <body>
     <div class="container">
-        <div class="spinBtn">Spin</div>
-        <div class="wheel">
+        <div class="spinBtn" >Spin</div>
+        <div id="wheel-container">
+        <div class="wheel " role="status"   id="wheel"><!--use onmouseover-->
             
-            <div class="number-intial" style="--i:1" aria-placeholder="Enter name"><span ><p style="color: white">Enter a name</p></span></div>
-
+            <div class="number-intial" style="--i:1" id="wheelCover" aria-placeholder="Enter name"><span ><p style="color: white">Enter a name</p></span></div>
 
         </div>
 
-        <textarea name="" id="EnterName" placeholder="Enter Name or Id" class="EnterPoke-Container" onchange="handleNameChange()"></textarea>
+        <textarea name="" id="EnterName" placeholder="Enter Name or Id" class="EnterPoke-Container"></textarea>
+        <button type="button"  onclick="handleNameChange()" class="btn btn-primary">Enter </button>
+    </div>
     </div>
 
     <script>
-        let wheel = document.querySelector('.wheel')
-        let spinBtn = document.querySelector('.spinBtn')
-        let value = Math.ceil(Math.random() * 3600)
-
-        spinBtn.onclick =function(){
-            wheel.style.transform = "rotate("+value+"deg)"
-             value += Math.ceil(Math.random() * 3600)
-
-        }
+     
 
     </script>
         <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz" crossorigin="anonymous"></script>
